--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,25 @@ Day2/work/day2_tb/_primary.dbs
 Day2/work/day2_tb/_primary.vhd
 Day2/work/day2_tb/verilog.prw
 Day2/work/day2_tb/verilog.psm
+Day3/work/_info
+Day3/work/_vmake
+Day3/work/_temp/vlog2fx77n
+Day3/work/_temp/vlog2kw7gn
+Day3/work/_temp/vlog2s9q8h
+Day3/work/_temp/vlog26bqsg
+Day3/work/_temp/vlogbvhhf9
+Day3/work/_temp/vlogbzih39
+Day3/work/_temp/vlogj9bkfv
+Day3/work/_temp/vlogjnck0v
+Day3/work/_temp/vlogysq3wg
+Day3/work/_temp/vlogyyn35h
+Day3/work/day3/_primary.dat
+Day3/work/day3/_primary.dbs
+Day3/work/day3/_primary.vhd
+Day3/work/day3/verilog.prw
+Day3/work/day3/verilog.psm
+Day3/work/day3_tb/_primary.dat
+Day3/work/day3_tb/_primary.dbs
+Day3/work/day3_tb/_primary.vhd
+Day3/work/day3_tb/verilog.prw
+Day3/work/day3_tb/verilog.psm
